# gkrellm-powermeter

./: CMakeLists.txt  README.md  gkrellm-powermeter.c  gkrellm-powermeter.h  gkrellm_powermeter.c  gkrellm_powermeter.h
powermeter_library/: CMakeLists.txt  powerlogger.cpp  powerlogger.hpp  powermeter_library.cpp  powermeter_library.h  rapl_reader.cpp  rapl_reader.h
progmanager_library/: CMakeLists.txt  logger.cpp  logger.hpp  progmanager_library.cpp  progmanager_library.hpp  progmanager_library_c.cpp  progmanager_library_c.h  programstats.cpp  programstats.hpp
scripts/: frequencyautomated.py  frequencysweep.py  fulload36  fulload40  fulload8  pinautomated.py  pinautomated_threadsfirst.py
